[gd_scene load_steps=9 format=3 uid="uid://dtev03a35ehu4"]

[ext_resource type="Script" uid="uid://dn3jcwmp1xob6" path="res://src/main/nurikabe/refresher.gd" id="1_fdd4n"]
[ext_resource type="Shader" uid="uid://d4adblcb6nct3" path="res://src/main/nurikabe/flat_mix.gdshader" id="2_c2xks"]
[ext_resource type="Texture2D" uid="uid://fu81o78wd6ts" path="res://assets/main/refresher_a.png" id="2_otgk0"]
[ext_resource type="Texture2D" uid="uid://bynj171imr2st" path="res://assets/main/refresher_b.png" id="3_c2xks"]
[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://assets/main/ui/kenney/kenney_ui.tres" id="4_qnshh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxie6"]
size = Vector2(120, 120)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qnshh"]
shader = ExtResource("2_c2xks")
shader_parameter/mix_color = Color(1, 1, 1, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_n1qax"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_otgk0")
}, {
"duration": 1.0,
"texture": ExtResource("3_c2xks")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Refresher" type="Control" groups=["world_occupants"]]
y_sort_enabled = true
layout_mode = 3
anchors_preset = 0
offset_left = 1177.0
offset_top = 602.0
offset_right = 1477.0
offset_bottom = 802.0
mouse_filter = 1
script = ExtResource("1_fdd4n")

[node name="ClickArea" type="Area2D" parent="."]
position = Vector2(148, 156)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2(0, -84)
shape = SubResource("RectangleShape2D_bxie6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_qnshh")
position = Vector2(148, 120)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_n1qax")
frame_progress = 0.90685016
offset = Vector2(0, -32)

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -73.5
offset_top = -39.0
offset_right = 73.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_qnshh")
theme_override_font_sizes/font_size = 32
text = "New puzzles
in 99:99"
horizontal_alignment = 1

[node name="RefreshTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 900.0
autostart = true

[connection signal="input_event" from="ClickArea" to="." method="_on_click_area_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_refresh_timer_timeout"]
